# content-farm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: account.yaml  niche.yaml
config/prompts/: caption_generator.md  idea_research.md  script_generator.md
scripts/: run_ideation.ps1  run_pipeline.ps1  setup_windows.ps1
src/: __init__.py  analytics.py  broll.py  captions.py  cli.py  db.py  deep_research.py  idea_generator.py  idea_parser.py  logger.py  models.py  orchestrator.py  package_exporter.py  performance_context.py  pipeline.py  prompts.py  renderer.py  script_generator.py  settings.py  sheets.py  visual_generator.py  voiceover.py
tests/: __init__.py  conftest.py  test_db.py  test_idea_generator.py  test_models.py  test_script_generator.py  test_visual_assets.py
