[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faceless-content-farm"
version = "0.1.0"
description = "Windows-first content automation MVP foundation for human-approved short-form ideas."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "google-api-python-client>=2.120.0",
  "google-auth>=2.29.0",
  "google-genai>=1.0.0",
  "edge-tts>=6.1.12",
  "python-dotenv>=1.0.1",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.2.1",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
content-farm = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
