[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faceless-content-farm"
version = "0.1.0"
description = "Content automation MVP for faceless short-form video"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "google-genai>=1.0.0",
  "google-api-python-client>=2.100.0",
  "google-auth>=2.23.0",
  "edge-tts>=6.1.0",
  "pycaps>=0.2.0",
  "openai-whisper>=20231117",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
]

[project.scripts]
content-farm = "src.cli:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
